imgur-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: imgur-service
  name: imgur-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: imgur-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.service: imgur-service
    spec:
      containers:
        - image: imgur-service:latest
          name: imgur-service
          ports:
            - containerPort: 8091
          resources: {}
          volumeMounts:
            - mountPath: /src/main/TemporaryFiles/
              name: temporary-files
      restartPolicy: Always
      volumes:
        - name: temporary-files
          persistentVolumeClaim:
            claimName: temporary-files
status: {}
