imgur-service-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: imgur-service
  name: imgur-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: imgur-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.service: imgur-service
    spec:
      containers:
        - image: imgur-service
          imagePullPolicy: Never
          name: imgur-service
          ports:
            - containerPort: 8091
          resources: {}
          volumeMounts:
            - mountPath: /src/main/TemporaryFiles/
              name: temporary-files
      restartPolicy: Always
      volumes:
        - name: temporary-files
          persistentVolumeClaim:
            claimName: temporary-files
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: imgur-service
  name: imgur-service
spec:
  type: ClusterIP
  ports:
    - name: "8091"
      port: 8091
      targetPort: 8091
  selector:
    io.kompose.service: imgur-service
status:
  loadBalancer: {}
