imgur-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: imgur-service
  name: imgur-service
spec:
  type: ClusterIP
  ports:
    - name: "8091"
      port: 8091
      targetPort: 8091
  selector:
    io.kompose.service: imgur-service
status:
  loadBalancer: {}
