keycloak-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: db-mysql-keycloak
            - name: DB_DATABASE
              value: keycloak
            - name: DB_PASSWORD
              value: e63sAMGsedan
            - name: DB_USER
              value: mysql
            - name: DB_VENDOR
              value: MYSQL
            - name: KEYCLOAK_PASSWORD
              value: admin
            - name: KEYCLOAK_USER
              value: leagueshare
            - name: PROXY_ADDRESS_FORWARDING
              value: "true"              
            - name : KEYCLOAK_HTTP_PORT
              value : "80"
            - name: KEYCLOAK_HTTPS_PORT
              value: "443"       
            - name: DB_PORT
              value: "3307"                
          image: keycloak-event-listener
          imagePullPolicy: Never
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
